--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -67,7 +67,7 @@
 <!ENTITY Ctr_closetab_4		"Au début de la barre d'onglets">
 <!ENTITY Ctr_closetab_5		"Sur tous les onglets (forcé)">
 <!ENTITY Ctr_closetab_hfot	"Masquer si un seul onglet est visible">
-<!ENTITY Ctr_closei_def		"Default icons">
+<!ENTITY Ctr_closei_def		"Icônes par défaut">
 <!ENTITY Ctr_closeonleft	"Position alternative sur l'onglet">
 <!ENTITY Ctr_close_wwltab	"Fermer la fenêtre lorsque je ferme le dernier onglet (about:config)">
 
@@ -175,7 +175,7 @@
 <!ENTITY Ctr_closegeneral	"Icônes de fermeture générale">
 
 <!ENTITY Ctr_tabsep_def		"Séparateur d'onglet par défaut">
-<!ENTITY Ctr_fxmockup		"&brandShortName; Mockup">
+<!ENTITY Ctr_fxmockup		"Maquette &brandShortName;">
 <!ENTITY Ctr_tabmokcolor	"Boutons des onglets de couleur blanche (fermer, nouveau, groupes, tout lister)">
 <!ENTITY Ctr_tabmokcolor2	"Texte des onglets de couleur blanche + ombre noire pour les onglets non actifs">
 <!ENTITY Ctr_tabmokcolor4	"Favicons vides : Pointillés de couleur blanche  ">
@@ -222,7 +222,7 @@
 <!ENTITY Ctr_urlbar_ib		"Bouton d'identité">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
 <!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
-<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
+<!ENTITY Ctr_verifiedcolors	"Couleurs de boutons pour les sites certifiés sécurisés, les connexions sécurisées et non sécurisées">
 <!ENTITY Ctr_faviconurl		"Afficher le favicon dans la barre d'adresse">
 <!ENTITY Ctr_padlock		"Cadenas">
 <!ENTITY Ctr_padlock_hid	"masqué">
@@ -311,22 +311,22 @@
 <!ENTITY Ctr_nodevtheme		"Empêcher l'application du thème 'Developer Edition'">
 
 <!ENTITY Ctr_experttweaks	"Expert">
-<!ENTITY Ctr_fx34search		"&brandShortName; 34+ introduit une nouvelle barre de recherche. Si cette option est décochée, l'ancienne barre de recherche est activée.">
-<!ENTITY Ctr_fx34loop		"&brandShortName; 34+ introduit la possibilité d'inviter quelqu'un à discuter. Cette possibilité est désactivée en décochant cette option.">
-<!ENTITY Ctr_fx35devtheme	"&brandShortName; 35+ introduit un nouveau thème 'Developer Edition'. Si cette option est décochée, le thème 'Developer Edition' est désactivé ainsi que son bouton dans la fenêtre de personnalisation.">
-<!ENTITY Ctr_fx36prefs		"&brandShortName; 36+ introduit les 'Préférences dans un onglet'. Si cette option est décochée, l'ancienne fenêtre des préférences est restaurée.">
+<!ENTITY Ctr_fx34search		"Si ce paramètre est décoché, l'ancienne barre de recherche est activée.">
+<!ENTITY Ctr_fx34loop		"Si ce paramètre est décoché, les fonctions d’appels et de conversations sont désactivées.">
+<!ENTITY Ctr_fx35devtheme	"Si ce paramètre est décoché, le thème 'Developer Edition' est desactivé.">
+<!ENTITY Ctr_fx36prefs		"Si ce paramètre est décoché, les préférences sont affichées dans une fenêtre distincte (mode traditionnel).">
 <!ENTITY Ctr_fx36prefs2		"Note: Ancienne fenêtre de préférences qui ne contient pas toutes les préférences de votre navigateur récemment ajoutées !">
-<!ENTITY Ctr_fx38reader		"&brandShortName; 38+ introduit un nouveau 'Mode lecture'. Si cette option est décochée, ce mode est désactivé et son icône est retirée de la barre d'adresse.">
-<!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+ introduit le support natif de 'Pocket'. Si cette option est décochée, 'Pocket' est désactivé et son bouton est retiré des barres d'outils.">
+<!ENTITY Ctr_fx38reader		"Si ce paramètre est décoché, le « mode lecture » est desactivé et son icône est retirée de la barre d'adresse.">
+<!ENTITY Ctr_fx38pocket		"Si ce paramètre est décoché, « Pocket » est desactivé et son bouton retiré des barres d’outils.">
 <!ENTITY Ctr_fx38pocket2	"Note: Déplacer le bouton 'Pocket' vers la 'fenêtre de personnalisation' avant de désactiver cette option, permet également d'enlever 'Pocket' des marques pages et du menu de lecture.">
-<!ENTITY Ctr_e_searchui		"Apparence de recherche">
+<!ENTITY Ctr_e_searchui		"Apparence de la barre de recherche">
 <!ENTITY Ctr_e_loop			"Appel et conversation">
 <!ENTITY Ctr_e_deved		"Thème Developer Edition">
 <!ENTITY Ctr_e_prefsui		"Préférences dans un onglet">
 <!ENTITY Ctr_e_readermode	"Mode lecture">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icône de lecture audio sur les onglets">
-<!ENTITY Ctr_fx42tabsaudico	"Unchecking this preference removes 'audio playing icon' from tabs.">
+<!ENTITY Ctr_fx42tabsaudico	"Décocher cette préférence pour ne plus afficher une icône audio sur les onglets.">
 
 
 <!ENTITY Ctr_pw_settings	"Réglages">
