--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -164,7 +164,7 @@
 <!ENTITY Ctr_addonversion	"Listy dodatków: wyświetl wersję dodatku">
 <!ENTITY Ctr_xpinstallui	"Stare okno instalacji dodatku (ustawienie about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Przycisk menu zakładek: wygląd pop-upu menu panelu">
-<!ENTITY Ctr_bmbunsortbm	"Przycisk menu zakładek: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbunsortbm	"Przycisk menu zakładek: podmenu 'nieposortowanych zakładek'">
 <!ENTITY Ctr_bmbutnotext	"Przycisk menu zakładek: ukryj etykietę na pasku zakładek">
 <!ENTITY Ctr_skipprintpr	"Przycisk drukowania: pomiń podgląd wydruku">
 <!ENTITY Ctr_tbconmenu		"Menu kontekstowe paska narzędzi: ukryj 'Przenieś do menu', 'Usuń z paska narzędzi', 'Odśwież wszystkie karty', 'Dodaj zakładki do wszystkich kart...' oraz 'Przywróć zamkniętą kartę'">
