--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -164,7 +164,7 @@
 <!ENTITY Ctr_addonversion	"Список додатків у Менеджері додатків: показати версію додатка">
 <!ENTITY Ctr_xpinstallui	"Менеджер додатків: старе вікно встановлення додатків (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Кнопка меню закладок: вигляд меню панелі">
-<!ENTITY Ctr_bmbunsortbm	"Кнопка меню закладок: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbunsortbm	"Кнопка меню закладок: субменю «несортованих закладок»">
 <!ENTITY Ctr_bmbutnotext	"Кнопка меню закладок: приховати ярлик на панелі закладок">
 <!ENTITY Ctr_skipprintpr	"Кнопка «Друк»: пропустити передогляд друку">
 <!ENTITY Ctr_tbconmenu		"Контекстне меню панелей: приховати «Перенести в меню», «Вилучити з панелі», «Оновити/закласти всі вкладки» та «Повернути закриту вкладку»">
@@ -218,7 +218,7 @@
 <!ENTITY Ctr_urlbardropm	"Перемістити маркер-трикутник в кінець рядку адреси">
 <!ENTITY Ctr_altreaderico	"Альтернативні іконки «Читача»">
 <!ENTITY Ctr_hideprbutton	"Приховати інфо кнопку «спливаюче вікно блоковано»">
-<!ENTITY Ctr_locsearchbw10	"Reduce location bars and search bars height (experimental)">
+<!ENTITY Ctr_locsearchbw10	"Зменшити висоту панелей рядку адреси та пошуку (експериментальне)">
 <!ENTITY Ctr_urlbar_ib		"Індикатори справжності панелі рядку адреси">
 <!ENTITY Ctr_ib_nohovcolor	"Не показувати сірий колір при наведенні миші">
 <!ENTITY Ctr_ib_graycolor	"Сірий колір для неопізнаних та «жовтих» сторінок">
@@ -229,10 +229,10 @@
 <!ENTITY Ctr_padlock_def	"типово">
 <!ENTITY Ctr_padlock_cla	"класичний">
 <!ENTITY Ctr_padlock_mod	"сучасний">
-<!ENTITY Ctr_padlock_ext	"Іконка '&brandShortName;' для дійсних «Про...» сторінок">
+<!ENTITY Ctr_padlock_ext	"Іконка «&brandShortName;» для дійсних «Про...» сторінок">
 <!ENTITY Ctr_icopageinfo	"Клік на іконку відкриває інформаційне вікно">
-<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
-<!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsbsize		"Налаштовувана ширина для панелей рядку адреси та пошуку">
+<!ENTITY Ctr_searchbar		"Панель пошуку">
 
 <!ENTITY Ctr_menubar_items	"Позиція пунктів меню">
 <!ENTITY Ctr_extrabar		"Додаткові панелі інструментів">
@@ -269,7 +269,7 @@
 
 <!ENTITY Ctr_aerocolors		"Кольори Blue Aero для основних панелей і вкладок">
 <!ENTITY Ctr_transpttbw10	"Панель заголовку/меню/вкладок: прибрати колір тла">
-<!ENTITY Ctr_transpttbew10	"Additional tweaks for some OS themes">
+<!ENTITY Ctr_transpttbew10	"Додаткові налаштування для деяких тем ОС">
 <!ENTITY Ctr_transptcw10	"Приховати типові OС кнопки мін/макс/закрити">
 <!ENTITY Ctr_hidenavbar		"Панель навігації: приховати панель">
 <!ENTITY Ctr_navbarpad		"Додаткові лівий та правий відступи">
