--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_cpanelmenus	"Panelmenuer: kompakt visning (bogmærker, historik, osv.)">
 <!ENTITY Ctr_hidezoomres	"Zoom-knapper på værktøjslinje: skjul zoom-nulstil-knapper">
 <!ENTITY Ctr_alt_newtabp	"Nyt faneblad-side (about:newtab): alternativt udseende">
-<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
+<!ENTITY Ctr_ctroldsearch	"Old search">
 <!ENTITY Ctr_addonmanager	"Add-on manager">
 <!ENTITY Ctr_alt_addonsp	"Tilføjelsens 'mere info'-side: alternativt udseende">
 <!ENTITY Ctr_alt_addonsm	"Alternative appearance">
