--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_cpanelmenus	"Kompakte 'Panel-Aufklappmenüs' (Lesezeichen, Chronik etc.)">
 <!ENTITY Ctr_hidezoomres	"Zoom-Schaltflächen auf Leisten: verstecke Schaltfläche 'Normalgröße'">
 <!ENTITY Ctr_alt_newtabp	"Seite 'Neuer Tab' (about:newtab): alternative Darstellung">
-<!ENTITY Ctr_ctroldsearch	"Alte 'Suche' (experimentell)">
+<!ENTITY Ctr_ctroldsearch	"Alte 'Suche'">
 <!ENTITY Ctr_addonmanager	"Add-on Manager">
 <!ENTITY Ctr_alt_addonsp	"'Mehr Info'-Seite: alternative Anordnung">
 <!ENTITY Ctr_alt_addonsm	"Alternative Darstellung">
