--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_cpanelmenus	"Αναδυόμενα μενού πίνακα (σελιδοδείκτες, ιστορικό κλπ): συνεπτυγμένη προβολή">
 <!ENTITY Ctr_hidezoomres	"Στοιχεία ελέγχου μεγέθυνσης σε εργαλειοθήκη: απόκρυψη κουμπιού επεναφοράς επιπέδου μεγέθυνσης">
 <!ENTITY Ctr_alt_newtabp	"Σελίδα νέας καρτέλας (about:newtab): εναλλακτική εμφάνιση">
-<!ENTITY Ctr_ctroldsearch	"Παλιότερη διεπαφή αναζήτησης (πειραματικό)">
+<!ENTITY Ctr_ctroldsearch	"Παλιότερη διεπαφή αναζήτησης">
 <!ENTITY Ctr_addonmanager	"Διαχειριστής πρόσθετων">
 <!ENTITY Ctr_alt_addonsp	"Σελίδα «Περισσότερα»: εναλλακτική σειρά περιεχομένου">
 <!ENTITY Ctr_alt_addonsm	"Εναλλακτική εμφάνιση">
