--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_cpanelmenus	"Menijowe wuskakowace wokna (čitasske znamjenja, historija atd.): kompaktny napohlad">
 <!ENTITY Ctr_hidezoomres	"Skalowanske elementy na symbolowej lajsće: Tłóčatko za wróćostajenje skalowanja schować">
 <!ENTITY Ctr_alt_newtabp	"Strona noweho rajtarka (about:newtab): alternatiwny napohlad">
-<!ENTITY Ctr_ctroldsearch	"Stare pytanje (eksperimentelne)">
+<!ENTITY Ctr_ctroldsearch	"Stare pytanje">
 <!ENTITY Ctr_addonmanager	"Zrjadowak přidatkow">
 <!ENTITY Ctr_alt_addonsp	"Strona 'wjace info': alternatiwny porjad">
 <!ENTITY Ctr_alt_addonsm	"Alternatiwny napohlad">
